// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentSpacer /> should render a content spacer with no sizes defined 1`] = `
.c0 {
  margin-bottom: 0px;
}

<ContentSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
      },
      Object {
        "content": <div>
          b
        </div>,
      },
      Object {
        "content": <div>
          c
        </div>,
      },
      Object {
        "content": <div>
          d
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="content_spacer"
  >
    <styled.div
      data-component-type="content_spacer_item"
      key="0"
    >
      <div
        className="c0"
        data-component-type="content_spacer_item"
      >
        <div>
          a
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="1"
    >
      <div
        className="c0"
        data-component-type="content_spacer_item"
      >
        <div>
          b
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="2"
    >
      <div
        className="c0"
        data-component-type="content_spacer_item"
      >
        <div>
          c
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="3"
    >
      <div
        className="c0"
        data-component-type="content_spacer_item"
      >
        <div>
          d
        </div>
      </div>
    </styled.div>
  </div>
</ContentSpacer>
`;

exports[`<ContentSpacer /> should render a content spacer with varying sizes 1`] = `
.c0 {
  margin-bottom: 24px;
}

.c1 {
  margin-bottom: 48px;
}

.c2 {
  margin-bottom: 80px;
}

.c3 {
  margin-bottom: 0px;
}

<ContentSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
        "size": "small",
      },
      Object {
        "content": <div>
          b
        </div>,
        "size": "medium",
      },
      Object {
        "content": <div>
          c
        </div>,
        "size": "large",
      },
      Object {
        "content": <div>
          d
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="content_spacer"
  >
    <styled.div
      data-component-type="content_spacer_item"
      key="0"
      size="small"
    >
      <div
        className="c0"
        data-component-type="content_spacer_item"
        size="small"
      >
        <div>
          a
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="1"
      size="medium"
    >
      <div
        className="c1"
        data-component-type="content_spacer_item"
        size="medium"
      >
        <div>
          b
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="2"
      size="large"
    >
      <div
        className="c2"
        data-component-type="content_spacer_item"
        size="large"
      >
        <div>
          c
        </div>
      </div>
    </styled.div>
    <styled.div
      data-component-type="content_spacer_item"
      key="3"
    >
      <div
        className="c3"
        data-component-type="content_spacer_item"
      >
        <div>
          d
        </div>
      </div>
    </styled.div>
  </div>
</ContentSpacer>
`;
